# fractals

./: CMakeLists.txt
extends/include/: activation_functions.hpp  list.hpp  uMtrxF.hpp  uVecF.hpp  vec2i.hpp
extends/src/: uMtrxF.cpp  uVecF.cpp  vec2i.cpp
src/: app.cpp  app.hpp  fractal.cpp  fractal.hpp  graphics.cpp  graphics.hpp  main.cpp  sound.cpp  sound.hpp
src/bot/: bot.cpp  bot.hpp
src/math/: list.hpp  mtrx.cpp  mtrx.hpp  vec.cpp  vec.hpp
src/neuron_network/: neuron_network_I.hpp  simple_perceptron.cpp  simple_perceptron.hpp
src/nueron_network/: neuron_network.cpp  neuron_network.hpp
src/world/: world.cpp  world.hpp
